[gd_scene load_steps=6 format=4 uid="uid://dmgnm8domeady"]

[ext_resource type="Script" uid="uid://1whk60t4nahm" path="res://Scripts/level_2.gd" id="1_12fag"]
[ext_resource type="PackedScene" uid="uid://bx1caayug8lts" path="res://Scenes/Map.tscn" id="1_smnlx"]
[ext_resource type="PackedScene" uid="uid://nggnmoo5st8s" path="res://Scenes/Player.tscn" id="2_12fag"]
[ext_resource type="Script" uid="uid://dvpy8wwdvjdpv" path="res://Scenes/reset.gd" id="4_1q6tm"]
[ext_resource type="Texture2D" uid="uid://dovqnp4rid7j8" path="res://Assets/windego.png" id="5_v36qu"]

[node name="Level2" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_12fag")

[node name="TileMapLayer" parent="." instance=ExtResource("1_smnlx")]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAAAAAABAAAAAAADAAAAAAACAAAAAAADAAAAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAFAAAAAAADAAAAAAAGAAAAAAADAAAAAAAHAAAAAAADAAAAAAAIAAAAAAADAAAAAAAJAAAAAAADAAAAAAAKAAAAAAADAAAAAAALAAAAAAADAAAAAAAMAAAAAAADAAAAAAANAAAAAAADAAAAAAAOAAAAAAADAAAAAAAPAAAAAAADAAAAAAAAAAEAAAADAAAAAAAAAAIAAAADAAAAAAAAAAMAAAADAAAAAAAAAAQAAAADAAAAAAAAAAUAAAADAAAAAAAAAAYAAAADAAAAAAAAAAcAAAADAAAAAAAAAAgAAAADAAAAAAAPAAgAAAADAAAAAAAPAAEAAAADAAAAAAAPAAIAAAADAAAAAAAPAAMAAAADAAAAAAAPAAQAAAADAAAAAAAPAAUAAAADAAAAAAAPAAYAAAADAAAAAAAPAAcAAAADAAAAAAABAAEAAAADAAAAAAACAAEAAAADAAAAAAADAAEAAAADAAAAAAAEAAEAAAADAAAAAAAFAAEAAAADAAAAAAAGAAEAAAADAAAAAAAHAAEAAAADAAAAAAAIAAEAAAADAAAAAAAJAAEAAAADAAAAAAAKAAEAAAADAAAAAAALAAEAAAADAAAAAAAMAAEAAAADAAAAAAANAAEAAAADAAAAAAAOAAEAAAADAAAAAAAOAAIAAAADAAAAAAANAAIAAAADAAAAAAAMAAIAAAADAAAAAAALAAIAAAADAAAAAAAKAAIAAAADAAAAAAAJAAIAAAADAAAAAAAIAAIAAAADAAAAAAAHAAIAAAADAAAAAAAGAAIAAAADAAAAAAAFAAIAAAADAAAAAAAEAAIAAAADAAAAAAADAAIAAAADAAAAAAACAAIAAAADAAAAAAABAAIAAAADAAAAAAABAAMAAAADAAAAAAACAAMAAAADAAAAAAADAAMAAAADAAAAAAAEAAMAAAADAAAAAAAFAAMAAAADAAAAAAAGAAMAAAADAAAAAAAHAAMAAAADAAAAAAAIAAMAAAADAAAAAAAJAAMAAAADAAAAAAAKAAMAAAADAAAAAAALAAMAAAADAAAAAAAMAAMAAAADAAAAAAANAAMAAAADAAAAAAAOAAMAAAADAAAAAAAAAAkAAAADAAAAAAAAAAoAAAADAAAAAAAAAAsAAAADAAAAAAABAAsAAAADAAAAAAACAAsAAAADAAAAAAADAAsAAAADAAAAAAAEAAsAAAADAAAAAAAFAAsAAAADAAAAAAAGAAsAAAADAAAAAAAHAAsAAAADAAAAAAAIAAsAAAADAAAAAAAJAAsAAAADAAAAAAAKAAsAAAADAAAAAAALAAsAAAADAAAAAAAMAAsAAAADAAAAAAANAAsAAAADAAAAAAAOAAsAAAADAAAAAAAPAAsAAAADAAAAAAAPAAkAAAADAAAAAAAPAAoAAAADAAAAAAABAAQAAAABAAAAAAACAAQAAAABAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAQAAAABAAAAAAANAAQAAAABAAAAAAAOAAQAAAABAAAAAAAOAAUAAAABAAAAAAANAAUAAAABAAAAAAALAAUAAAADAAAAAAAKAAUAAAADAAAAAAAJAAUAAAADAAAAAAAIAAUAAAADAAAAAAAHAAUAAAADAAAAAAAGAAUAAAADAAAAAAAFAAUAAAADAAAAAAAEAAUAAAADAAAAAAADAAUAAAABAAAAAAACAAUAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAABAAAAAAACAAYAAAABAAAAAAADAAYAAAABAAAAAAAEAAYAAAABAAAAAAAIAAgAAAADAAAAAAAIAAcAAAADAAAAAAAIAAYAAAABAAAAAAAHAAYAAAABAAAAAAAGAAYAAAABAAAAAAAFAAYAAAABAAAAAAAFAAcAAAADAAAAAAAEAAcAAAADAAAAAAADAAcAAAADAAAAAAACAAcAAAADAAAAAAABAAcAAAADAAAAAAABAAgAAAADAAAAAAABAAkAAAADAAAAAAABAAoAAAADAAAAAAACAAoAAAADAAAAAAACAAkAAAADAAAAAAACAAgAAAADAAAAAAADAAgAAAADAAAAAAADAAkAAAADAAAAAAADAAoAAAADAAAAAAAEAAoAAAADAAAAAAAEAAkAAAADAAAAAAAEAAgAAAADAAAAAAAFAAgAAAADAAAAAAAFAAkAAAADAAAAAAAFAAoAAAADAAAAAAAGAAoAAAADAAAAAAAGAAkAAAADAAAAAAAGAAgAAAADAAAAAAAGAAcAAAADAAAAAAAHAAcAAAADAAAAAAAHAAgAAAADAAAAAAAHAAkAAAADAAAAAAAHAAoAAAADAAAAAAAIAAoAAAADAAAAAAAIAAkAAAADAAAAAAAJAAkAAAABAAAAAAAJAAgAAAABAAAAAAAJAAcAAAADAAAAAAAJAAYAAAABAAAAAAAKAAYAAAABAAAAAAAKAAcAAAADAAAAAAAKAAgAAAABAAAAAAAKAAkAAAABAAAAAAAKAAoAAAABAAAAAAAJAAoAAAABAAAAAAALAAoAAAABAAAAAAALAAkAAAABAAAAAAALAAgAAAABAAAAAAALAAcAAAADAAAAAAALAAYAAAABAAAAAAAMAAYAAAABAAAAAAAMAAcAAAABAAAAAAAMAAgAAAABAAAAAAAMAAkAAAABAAAAAAAMAAoAAAABAAAAAAANAAoAAAABAAAAAAANAAkAAAABAAAAAAANAAgAAAABAAAAAAANAAcAAAABAAAAAAANAAYAAAABAAAAAAAOAAYAAAABAAAAAAAOAAcAAAABAAAAAAAOAAgAAAABAAAAAAAOAAkAAAABAAAAAAAOAAoAAAABAAAAAAAMAAUAAAABAAAAAAADAAQAAAABAAAAAAAGAAQAAAAAAAAAAAA=")

[node name="PlayerFlag" parent="TileMapLayer" index="0"]
tile_map_data = PackedByteArray("AAANAAUAAAABAAAAAAAJAAgAAAACAAAAAAALAAgAAAAFAAAAAAALAAoAAAAEAAAAAAAJAAoAAAADAAAAAAA=")

[node name="Player" parent="." instance=ExtResource("2_12fag")]
position = Vector2(40, 88)
scale = Vector2(0.125, 0.125)
tile_size = 16.0

[node name="Reset" type="Button" parent="."]
offset_left = 290.66666
offset_top = 152.0
offset_right = 344.66666
offset_bottom = 183.0
text = "RESET"
script = ExtResource("4_1q6tm")

[node name="Steps" type="Label" parent="."]
offset_left = 6.0000005
offset_top = 195.66667
offset_right = 94.333336
offset_bottom = 212.66667
theme_override_font_sizes/font_size = 12
text = "Steps: 0"

[node name="Windego" type="Sprite2D" parent="."]
visible = false
position = Vector2(196.00002, 119)
scale = Vector2(1.5619849, 0.3432586)
texture = ExtResource("5_v36qu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
offset_left = 261.33334
offset_top = 5.3333335
offset_right = 301.33334
offset_bottom = 45.333332

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "1. Touch the red tile"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "2. Do not touch the 
flag"

[connection signal="blue_entered" from="Player" to="." method="_on_player_blue_entered"]
[connection signal="flag_entered" from="Player" to="." method="_on_player_flag_entered"]
[connection signal="inputed" from="Player" to="." method="_on_player_inputed"]
[connection signal="red_entered" from="Player" to="." method="_on_player_red_entered"]
[connection signal="pressed" from="Reset" to="Reset" method="_on_pressed"]

[editable path="TileMapLayer"]
